# vector-intro

./: .gitignore  helpers.py  pyproject.toml  vector-intro.css  vector-intro.ipynb
data/: shopify-20345599_products.pkl  shopify-26890272823_products.pkl
examples/: header-footer-scroll-nocenter.css
