[tool.poetry]
name = "vector-intro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vector_intro"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sentence-transformers = "^2.2.2"
torch = "^2.1.0"
matplotlib = "^3.8.1"
pandas = "^2.1.2"
jupyterlab-rise = "^0.41.0"
adjusttext = "^0.8"
jupyter = "^1.0.0"
black = { version = "^23.10.1", extras = ["jupyter"] }
rise = "^5.7.1"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 70 # Optimized for reveal.js slides
