[tool.poetry]
name = "vector-intro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vector_intro"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
setuptools = "^68.2.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
scikit-learn = "^1.3.2"
funcy = "^2.0"
sentence-transformers = "^2.2.2"
adjusttext = "^0.8"
bson = "^0.5.10"
annoy = "^1.17.3" # maybe poetry run arch -arm64 python3 -m pip install annoy for mac
matplotlib = "^3.8.1"
rise = "^5.7.1"
jupyterlab-rise = "^0.41.0"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "^6.5.6"
jupyter = "^1.0.0"

[tool.poetry.group.linting.dependencies]
black = { version = "^23.10.1", extras = ["jupyter"] }
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 70 # Optimized for reveal.js slides
